api-gateway.yaml
1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: kavinda06/api-gateway:3.02
        ports:
        - containerPort: 3050

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 3050
